--- a/deploy-petclinic.yml
+++ b/deploy-petclinic.yml
@@ -16,7 +16,7 @@
         dest: "/app/petclinic.jar"
         mode: push  # Ensures files are pushed from the control machine to the target
       loop: "{{ jar_files.files }}"
-      when: jar_files.matched > 0
+      #when: jar_files.matched > 0
       delegate_to: localhost  # Delegate the copying task to localhost
       when: inventory_hostname == 'petclinic-host'
 
