--- a/deploy-petclinic.yml
+++ b/deploy-petclinic.yml
@@ -2,23 +2,13 @@
 - name: Deploy PetClinic Application
   hosts: all
   tasks:
-    - name: Find PetClinic JAR file on Jenkins host
-      find:
-        paths: "/var/jenkins_home/workspace/Pet Clinic/target/"
-        patterns: 'spring-petclinic-*.jar'
-      register: jar_files
-      delegate_to: localhost  # This ensures the find operation runs on Jenkins host
-      run_once: true  # Ensures this task runs only once, not on every host in the inventory
-
     - name: Copy PetClinic JAR to the target server
       synchronize:
-        src: "{{ item.path }}"
+        src: "/var/jenkins_home/workspace/Pet Clinic/target/spring-petclinic-3.2.0-SNAPSHOT.jar"
         dest: "/app/petclinic.jar"
-        mode: push  # Ensures files are pushed from the control machine to the target
-      loop: "{{ jar_files.files }}"
-      #when: jar_files.matched > 0
-      delegate_to: localhost  # Delegate the copying task to localhost
+        mode: push
       when: inventory_hostname == 'petclinic-host'
+      delegate_to: localhost
 
     - name: Start the PetClinic Java application
       shell: |
