Keep the playbook more organised

--- a/deploy-petclinic.yml
+++ b/deploy-petclinic.yml
@@ -5,7 +5,7 @@
     - name: Copy PetClinic JAR to the target server
       synchronize:
         src: "/var/jenkins_home/workspace/Pet Clinic/target/spring-petclinic-3.2.0-SNAPSHOT.jar"
-        dest: "/petclinic.jar"
+        dest: "/app/petclinic.jar"
         rsync_path: "/usr/bin/rsync"
         mode: push
 
@@ -14,6 +14,6 @@
 
     - name: Start the PetClinic Java application
       shell: |
-        nohup java -jar /petclinic.jar > /petclinic.log 2>&1 &
+        nohup java -jar /app/petclinic.jar > /petclinic.log 2>&1 &
       async: 20
       poll: 0
