--- a/deploy-petclinic.yml
+++ b/deploy-petclinic.yml
@@ -14,6 +14,6 @@
 
     - name: Start the PetClinic Java application
       shell: |
-        nohup java -jar /app/petclinic.jar > /petclinic.log 2>&1 &
+        nohup java -jar /app/petclinic.jar -server.port=8081 > /petclinic.log 2>&1 &
       async: 20
       poll: 0
